# python-training-three-days

./: .gitignore  README.md
solutions/01_list_comprehension_lambdas_oop/: 02_lambda_functions.py
solutions/01_list_comprehension_lambdas_oop_n_functional/: 01_list_comprehensions.py
solutions/02_building_packages/poetry_demo/: pyproject.toml
solutions/02_building_packages/poetry_demo/poetry_demo/: __init__.py  foo.py
solutions/03_testing_introduction/: test_calculator_pytest.py  test_calculator_unittest.py  test_product_stock_pytest.py  test_product_stock_unittest.py
solutions/03_testing_introduction/codes/: calculator.py  product_stock.py
solutions/04_test_driven_development/: insurance_policy.py  test_insurance_policy.py
solutions/06_pydantic/: README.md  insurance_policy.py  test_insurance_policy.py
solutions/08_error_handling/: README.md  error_handling.py  test_error_handling.py
trainings/01_list_comprehension_lambdas_oop/: 02_lambda_functions.py
trainings/01_list_comprehension_lambdas_oop_n_functional/: 01_list_comprehensions.py
trainings/02_building_packages/poetry_demo/: README.md
trainings/03_testing_introduction/: test_calculator_pytest.py  test_calculator_unittest.py  test_product_stock_pytest.py  test_product_stock_unittest.py
trainings/04_test_driven_development/: README.md  insurance_policy.py  test_insurance_policy.py
trainings/06_pydantic/: insurance_policy.py  test_insurance_policy.py
trainings/08_error_handling/: error_handling.py  test_error_handling.py
